# aruco-spiral-sandbox

./: .gitignore  README.md
src/aruco_detector_cpp/: CMakeLists.txt  package.xml
src/aruco_detector_cpp/src/: detector_node.cpp
src/hover_marker_mode/: CMakeLists.txt  package.xml
src/hover_marker_mode/launch/: hover_demo.launch.py
src/hover_marker_mode/src/: hover_mode.cpp  hover_mode.hpp  main.cpp
src/spiral_marker_mode/: CMakeLists.txt  package.xml
src/spiral_marker_mode/launch/: spiral_demo.launch.py
src/spiral_marker_mode/src/: spiral_mode.cpp  spiral_mode.hpp  spiral_mode_main.cpp
